name:                t5
version:             0.1.0.0
synopsis:            html json templating
-- description:         
-- license:             
license-file:        LICENSE
author:              Daniel Choi
maintainer:          dhchoi@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable t5
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       hxt,
                       bytestring,
                       text, 
                       aeson,
                       string-qq,
                       vector,
                       unordered-containers,
                       parsec,
                       split,
                       scientific,
                       transformers,
                       containers,
                       HUnit
  default-language:    Haskell2010


executable t5merge
  main-is:             Merge.hs
  build-depends:       base >=4.7 && <4.8,
                       hxt,
                       bytestring,
                       text
  default-language:    Haskell2010

